# fastapi-voice

./: .env.example  .gitignore  API_ADDED_SUMMARY.md  README.md  pyproject.toml  requirements.txt  voice-test.html  voice-test.js
app/: dependencies.py  main.py
app/core/: config.py  database.py  validation.py
app/models/: user.py
app/providers/: disabled_speech_provider.py  llm_provider.py  microsoft_voice_live_provider.py  offline_provider.py  openai_provider.py  speech_provider.py
app/routers/: documents.py  interactions.py  llm.py  metrics.py  sessions.py  status.py  transcripts.py  users.py  voice.py
app/schemas/: __init__.py  document.py  interaction.py  interaction_request.py  llm.py  sessions.py  status.py  transcripts.py  user.py  voice.py
app/services/: context_service.py  document_service.py  llm_handler.py  logger_service.py  model_selector.py  orchestrator.py
app/static/: api-tester.html
scripts/: check_microsoft_voice_live.py  smoke_test.py
