[project]
name = "fastapi-server"
version = "0.1.0"
description = ""
authors = [
    {name = "harsh gupta",email = "“guptasecularharsh@gmail.com”"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (==0.111)",
    "uvicorn[standard] (==0.30)",
    "sqlalchemy (==2.0)",
    "pydantic (==2.7)",
    "python-dotenv (==1.0)",
    "pymysql (==1.1)",
    "websockets (==12.0)",
    "httpx (==0.27)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
